--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -37,10 +37,10 @@ jobs:
           branch: master
           force: true
 
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      - uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           # the output branch we mentioned above
-          target_branch: output >>$GITHUB_OUTPUT
+          target_branch: output 
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
