--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -27,7 +27,7 @@ jobs:
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-      - run: git status >> $GITHUB_STATE
+      - run: git status 
 
       # Para as atualizações.
       - name: Push changes
@@ -37,7 +37,7 @@ jobs:
           branch: master
           force: true
 
-      - uses: crazy-max/ghaction-github-pages@v3.1.0
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           # the output branch we mentioned above
           target_branch: output 
