--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
+          persist-credentials: false
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.ref }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: master
           force: true
