--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -27,11 +27,11 @@ jobs:
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-      - run: git status 
+      - run: git status >> $GITHUB_OUTPUT
 
       # Para as atualizações.
       - name: Push changes
-        uses: ad-m/github-push-action@master >> $GITHUB_OUTPUT
+        uses: ad-m/github-push-action@master 
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: master
